# pre-commit-hooks

./: .pre-commit-hooks.yaml  pyproject.toml  sync_readme.py
src/pre_commit_hooks/: sync_readme.py
