[project]
name = "pre-commit-hooks"
version = "0.1.0"
description = "Custom pre-commit-hooks"
authors = [
    { name = "jan", email = "152862650+j-haacker@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"
